GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketReward__x/SalesforcePartnerTicketReward__x.object-meta.xml
<CustomObject>
    <description>SalesforcePartnerTicketReward</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforcePartnerTicketReward</externalName>
    <label>SalesforcePartnerTicketReward</label>
    <pluralLabel>SalesforcePartnerTicketReward</pluralLabel>
</CustomObject>