GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketReward__x/fields/DestinationGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>DestinationGroupDescription__c</fullName>
    <description>DestinationGroupDescription</description>
    <externalDeveloperName>DestinationGroupDescription</externalDeveloperName>
    <label>DestinationGroupDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>