GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketReward__x/fields/DestinationGroupId__c.field-meta.xml
<CustomField>
    <fullName>DestinationGroupId__c</fullName>
    <description>DestinationGroupId</description>
    <externalDeveloperName>DestinationGroupId</externalDeveloperName>
    <label>DestinationGroupId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>