GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketReward__x/fields/JourneyTypeCode__c.field-meta.xml
<CustomField>
    <fullName>JourneyTypeCode__c</fullName>
    <description>JourneyTypeCode</description>
    <externalDeveloperName>JourneyTypeCode</externalDeveloperName>
    <label>JourneyTypeCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>