GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketReward__x/fields/OriginGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>OriginGroupDescription__c</fullName>
    <description>OriginGroupDescription</description>
    <externalDeveloperName>OriginGroupDescription</externalDeveloperName>
    <label>OriginGroupDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>