GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketReward__x/fields/TravelClassCode__c.field-meta.xml
<CustomField>
    <fullName>TravelClassCode__c</fullName>
    <description>TravelClassCode</description>
    <externalDeveloperName>TravelClassCode</externalDeveloperName>
    <label>TravelClassCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>